--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
         <h2>Monto Ingresado:</h2>
         <ul id="listaMonto"></ul>
         <!-- Boton de regresar -->
-        <button id="regresar"></button>
+        <button id="regresar">Regresar</button>
+        <table id="tablaIngresos">
+            <thead>
+                <th>Clave</th>
+                <th>Valor</th>
+                <th>Acciones</th>
+            </thead>
+            <tbody id="tbody"></tbody>
+        </table>
     </div>
 </body>
 <script src="./app.js"></script>
