--- a/index.html
+++ b/index.html
@@ -8,28 +8,18 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="menaje" class="container">
-        <div>
-            <label for="clave">Clave</label>
-            <input type="text" name="clave" id="clave">
-        </div>
-        <div>
-            <label for="valor">Valor</label>
-            <input type="text" max="valor" id="valor">
-        </div>
-        <div>
-            <button id="añadir">Añadir</button>
-            <button id="eliminar">Eliminar</button>
-            <button id="limpiar">Limpiar</button>
-        </div>
-    </div>
-    <div id="datos"></div>
+    <form id="form">
+        <input type="hidden" id="id" value="">
+        <label for="clave">Clave</label>
+        <input type="text" id="clave">
+        <label for="valor">Valor</label>
+        <input type="text" id="valor">
+        <button type= "submit">Añadir</button>
+    </form>
+    
     <!-- Seccion para mostrar el monto ingresado -->
     <div id="montoIngresado" class="container">
         <h2>Monto Ingresado:</h2>
-        <ul id="listaMonto"></ul>
-        <!-- Boton de regresar -->
-        <button id="regresar">Regresar</button>
         <table id="tablaIngresos">
             <thead>
                 <th>Clave</th>
